force-app/main/default/objects/cpm__Installment__c/fields/Bank_Details_Number__c.field-meta.xml
<CustomField>
    <fullName>Bank_Details_Number__c</fullName>
    <description>This field is mapped from BankDetailsNumber (Care)</description>
    <externalId>true</externalId>
    <label>Bank Details Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>