force-app/main/default/objects/cpm__Installment__c/fields/Booking__c.field-meta.xml
<CustomField>
    <fullName>Booking__c</fullName>
    <formula>HYPERLINK(&#39;/&#39;+Sales_Invoice__r.Booking__c, Sales_Invoice__r.Booking__c,&#39;_self&#39;)</formula>
    <label>Booking</label>
    <type>Text</type>
</CustomField>