force-app/main/default/objects/cpm__Installment__c/fields/Care_Add_Membership_Attempts__c.field-meta.xml
<CustomField>
    <fullName>Care_Add_Membership_Attempts__c</fullName>
    <defaultValue>0</defaultValue>
    <label>CARE Add Membership Attempts</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>