force-app/main/default/objects/cpm__Installment__c/fields/Care_Add_Membership_Attepmts__c.field-meta.xml
<CustomField>
    <fullName>Care_Add_Membership_Attepmts__c</fullName>
    <label>CARE Add Membership Attepmts</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>