force-app/main/default/objects/cpm__Installment__c/fields/CARE_Add_Membership_Tx_Code__c.field-meta.xml
<CustomField>
    <fullName>CARE_Add_Membership_Tx_Code__c</fullName>
    <formula>Care_Add_Membership_Tx_Code_Base__c + &#39;_&#39; + TEXT(Care_Add_Membership_Attempts__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CARE Add Membership Tx Code</label>
    <type>Text</type>
</CustomField>