force-app/main/default/objects/cpm__Installment__c/fields/Care_Add_Membership_Tx_Code_Base__c.field-meta.xml
<CustomField>
    <fullName>Care_Add_Membership_Tx_Code_Base__c</fullName>
    <label>CARE Add Membership Tx Code Base</label>
    <length>255</length>
    <type>Text</type>
</CustomField>