force-app/main/default/objects/cpm__Installment__c/fields/Care_Error_Log__c.field-meta.xml
<CustomField>
    <fullName>Care_Error_Log__c</fullName>
    <label>CARE Error Log</label>
    <length>30000</length>
    <type>LongTextArea</type>
</CustomField>