force-app/main/default/objects/cpm__Installment__c/fields/Care_Membership_Added__c.field-meta.xml
<CustomField>
    <fullName>Care_Membership_Added__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Care Membership Added</label>
    <type>Checkbox</type>
</CustomField>