force-app/main/default/objects/cpm__Installment__c/fields/Care_Status__c.field-meta.xml
<CustomField>
    <fullName>Care_Status__c</fullName>
    <label>CARE Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Success</fullName>
            </value>
            <value>
                <fullName>Failure</fullName>
            </value>
            <value>
                <fullName>Waiting</fullName>
                <default>true</default>
                <label>Waiting</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>