force-app/main/default/objects/cpm__Installment__c/fields/Course_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Course_Start_Date__c</fullName>
    <formula>IF(
NOT(ISBLANK(Sales_Invoice__c)),
Sales_Invoice__r.Booking__r.Course__r.Start_Date__c,
cpm__Recurring_Payment__r.Sales_Invoice__r.Booking__r.Course__r.Start_Date__c
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Course Start Date</label>
    <type>Date</type>
</CustomField>