force-app/main/default/objects/cpm__Installment__c/fields/ga_decl_1__c.field-meta.xml
<CustomField>
    <fullName>ga_decl_1__c</fullName>
    <formula>IF (
AND ( NOT(ISNULL(cpm__Contact__c)), cpm__Contact__r.gaid__Active_Gift_Aid_Declarations__c &gt; 0 ),&#39;Y&#39;,&#39;N&#39;
)</formula>
    <label>Gift Aid Declaration 1</label>
    <type>Text</type>
</CustomField>