force-app/main/default/objects/cpm__Installment__c/fields/gaid__Gift_Aidable_Amount__c.field-meta.xml
<CustomField>
    <fullName>gaid__Gift_Aidable_Amount__c</fullName>
    <description>Gift Aidable Amount</description>
    <inlineHelpText>If empty then whole Amount is used</inlineHelpText>
    <label>Gift Aidable Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>