force-app/main/default/objects/cpm__Installment__c/fields/Membership_Amount__c.field-meta.xml
<CustomField>
    <fullName>Membership_Amount__c</fullName>
    <formula>CASE(Membership_Type__c,
 &#39;A&#39;, 48,
 &#39;E&#39;, 57,
 &#39;F&#39;, 120,
 &#39;R&#39;, 10,
 &#39;V&#39;, 26,
 &#39;F&#39;, 26,
null
)</formula>
    <label>Membership Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>