force-app/main/default/objects/cpm__Installment__c/fields/Membership_Type__c.field-meta.xml
<CustomField>
    <fullName>Membership_Type__c</fullName>
    <label>Membership Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>A</fullName>
            </value>
            <value>
                <fullName>E</fullName>
            </value>
            <value>
                <fullName>F</fullName>
            </value>
            <value>
                <fullName>R</fullName>
            </value>
            <value>
                <fullName>V</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>