force-app/main/default/objects/cpm__Installment__c/fields/NCT_Number_Parent__c.field-meta.xml
<CustomField>
    <fullName>NCT_Number_Parent__c</fullName>
    <label>NCT Number(Parent)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>