force-app/main/default/objects/cpm__Installment__c/fields/Partial_Gift_Amount_Beta__c.field-meta.xml
<CustomField>
    <fullName>Partial_Gift_Amount_Beta__c</fullName>
    <label>Partial Gift Aid Amount(Beta)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>