force-app/main/default/objects/cpm__Installment__c/fields/Partner_Contact__c.field-meta.xml
<CustomField>
    <fullName>Partner_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Partner Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Installments (Partner Contact)</relationshipLabel>
    <relationshipName>Installments</relationshipName>
    <type>Lookup</type>
</CustomField>