force-app/main/default/objects/cpm__Installment__c/fields/PSA_Area__c.field-meta.xml
<CustomField>
    <fullName>PSA_Area__c</fullName>
    <formula>IF(
NOT(ISBLANK(Sales_Invoice__c)), 
Sales_Invoice__r.Booking__r.PSA_Office__c,  
cpm__Recurring_Payment__r.Sales_Invoice__r.Booking__r.PSA_Office__c
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>PSA Area</label>
    <type>Text</type>
</CustomField>