force-app/main/default/objects/cpm__Installment__c/fields/Sales_Invoice__c.field-meta.xml
<CustomField>
    <fullName>Sales_Invoice__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Sales Invoice</label>
    <referenceTo>Zumzum__Sales_Invoice__c</referenceTo>
    <relationshipLabel>Installments</relationshipLabel>
    <relationshipName>Installments</relationshipName>
    <type>Lookup</type>
</CustomField>