force-app/main/default/objects/cpm__Installment__c/validationRules/AmountMustMatchTheMembershipType.validationRule-meta.xml
<ValidationRule>
    <fullName>AmountMustMatchTheMembershipType</fullName>
    <active>true</active>
    <errorConditionFormula>NOT(OR(
AND(ISPICKVAL(Membership_Type__c, &#39;A&#39;), cpm__Amount__c=48),
AND(ISPICKVAL(Membership_Type__c, &#39;E&#39;), cpm__Amount__c=57),
AND(ISPICKVAL(Membership_Type__c, &#39;F&#39;), cpm__Amount__c=120),
AND(ISPICKVAL(Membership_Type__c, &#39;R&#39;), cpm__Amount__c=10),
AND(ISPICKVAL(Membership_Type__c, &#39;V&#39;), cpm__Amount__c=26),
AND(ISPICKVAL(Membership_Type__c, &#39;F&#39;), cpm__Amount__c=26),
ISPICKVAL(Membership_Type__c, &#39;&#39;)
))</errorConditionFormula>
    <errorMessage>Amount must match the membership type:

A: £48
E: £57
F: £120
R: £10
V or F: £26</errorMessage>
</ValidationRule>