force-app/main/default/objects/cpm__Installment__c/listViews/All_record_with_status_Failed.listView-meta.xml
<ListView>
    <fullName>All_record_with_status_Failed</fullName>
    <columns>NAME</columns>
    <columns>cpm__Contact__c</columns>
    <columns>cpm__Status__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>cpm__Status__c</field>
        <operation>equals</operation>
        <value>Failed</value>
    </filters>
    <label>All record with status &quot;Failed&quot;</label>
    <language>en_US</language>
</ListView>