force-app/main/default/objects/cpm__Installment__c/listViews/cpm__All.listView-meta.xml
<ListView>
    <fullName>cpm__All</fullName>
    <columns>PSA_Area__c</columns>
    <columns>NAME</columns>
    <columns>Booking__c</columns>
    <columns>cpm__Contact__c</columns>
    <columns>cpm__Amount__c</columns>
    <columns>cpm__Due_Date__c</columns>
    <columns>cpm__Last_Collection_Date__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>