force-app/main/default/objects/cpm__Installment__c/listViews/Failed_Installments.listView-meta.xml
<ListView>
    <fullName>Failed_Installments</fullName>
    <columns>PSA_Area__c</columns>
    <columns>NAME</columns>
    <columns>Booking__c</columns>
    <columns>Course_Start_Date__c</columns>
    <columns>cpm__Contact__c</columns>
    <columns>cpm__Amount__c</columns>
    <columns>cpm__Due_Date__c</columns>
    <columns>cpm__Last_Collection_Date__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>cpm__Status__c</field>
        <operation>equals</operation>
        <value>Failed</value>
    </filters>
    <label>Failed Installments</label>
    <language>en_US</language>
    <sharedTo>
        <role>Finance</role>
        <role>PSA</role>
    </sharedTo>
</ListView>