force-app/main/default/objects/cpm__Installment__c/listViews/Outstanding_Installments.listView-meta.xml
<ListView>
    <fullName>Outstanding_Installments</fullName>
    <columns>NAME</columns>
    <columns>Booking__c</columns>
    <columns>cpm__Contact__c</columns>
    <columns>cpm__Amount__c</columns>
    <columns>cpm__Due_Date__c</columns>
    <columns>cpm__Last_Collection_Date__c</columns>
    <columns>PSA_Area__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>cpm__Status__c</field>
        <operation>equals</operation>
        <value>Outstanding</value>
    </filters>
    <label>Outstanding Installments</label>
    <language>en_US</language>
    <sharedTo>
        <role>Finance</role>
        <role>PSA</role>
    </sharedTo>
</ListView>